--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 <footer>
-    <p>WEBSITUDIO</p>
+    <a href="webstudio">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
