--- a/index.html
+++ b/index.html
@@ -7,85 +7,76 @@
 </head>
 <body>
 <header>
-<nav>
-    <div class="logo">
-        <a href="webstudio">WebStudio</a>
-<ul>
-<li><a href="studio">studio</a></li>
-<li><a href="Portfolio">Portfolio</a></li>
-<li><a href="Contacts">Contacts</a></li>
-</ul>
-</div>
-</nav>
-<p>EMAIL: <a href="maleto:@devstudio.com">info@devstudio.com</a></p>
-<p>tel: <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></p>
+    <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
+    </nav>
+    <address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+    </address>
 </header>
 <main>
-<section>
- <h1>Effective Solutions
-    for Your Business</h1>
-    <button>Order Service</button>   
-</section>
-  <section>
-<div>
-<h3 id="business">Strategy</h3>
-<p>Our goal is to identify the business
-    problem to walk away with the perfect and creative solution. </p>
-</div>
-<div>
-<h3 id="key-massage">Punctuality</h3>
-<p>
-    Bring the key message to the brand's audience for the best price within the shortest possible time.
-</p>
-</div>
-<div>
-<h3 id="digital-growth">Diligence</h3>
-<p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-</div>
-<div>
-<h3 id="design-practice">Technologies</h3>
-<p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-</div>
-  </section>
-<section class="portfolio">
-<h2>Our Team</h2>
-<div class="portfolio-grid">
-<div class="portfolio-item">
-<img src="images/img.png" alt="photo 1">
-<h3>Mark Guerrero</h3>
-<p>Product Designer</p>
-</div>
-<div class="portfolio-item">
-<img src="images/img(1).png" alt="photo 2">
-<h3>Tom Ford</h3>
-<p>Frontend Developer</p>
-</div>
-<div class="portfolio-item">
-    <img src="images/img(2).png" alt="photo 3">
-<h3>Camila Garcia</h3>
-<p>Marketing</p>
-
-</div>
-<div class="portfolio-item">
-<img src="images/img(3).png" alt="photo 4">
-<h3>Daniel Wilson</h3>
-<p>UI Designer</p>
-</div>
-</div>
-
-
-
-</section>
+    <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>   
+    </section>
+    <section>
+        <h2>Our Features</h2>
+        <ul>
+            <li>
+                <h3>Strategy</h3>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li>
+                <h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+                <h3>Diligence</h3>
+                <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+    </section>
+    <section class="portfolio">
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="./images/img.jpg" alt="Mark Guerrero" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/img1.jpg" alt="Tom Ford" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/img2.jpg" alt="Camila Garcia" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img3.jpg" alt="Daniel Wilson" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
 </main>
-
-
-
 <footer>
-    <a href="webstudio">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
-
-
 </body>
-
 </html>
