--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/img1.png" alt="Tom Ford" width="264">
+                <img src="./images/img(1).png" alt="Tom Ford" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/img2.png" alt="Camila Garcia" width="264">
+                <img src="./images//img(2).png" alt="Camila Garcia" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/img3.png" alt="Daniel Wilson" width="264">
+                <img src="./images/img(3).png" alt="Daniel Wilson" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
