--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <main>
     <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>   
+        <button type="button">Order Service</button>  
     </section>
     <section>
         <h2>Our Features</h2>
@@ -52,22 +52,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images/img.png" alt="Mark Guerrero" width="264">
+                <img src="./images/img.jpg" alt="Mark Guerrero" width="264">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/img(1).png" alt="Tom Ford" width="264">
+                <img src="./images/img(1).jpg" alt="Tom Ford" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images//img(2).png" alt="Camila Garcia" width="264">
+                <img src="./images/img(2).jpg" alt="Camila Garcia" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/img(3).png" alt="Daniel Wilson" width="264">
+                <img src="./images/img(3).jpg" alt="Daniel Wilson" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
